--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="Yensplash2k24"
       name="description"
     />
-    <meta content="Home - YENSPLASH" property="og:title" />
+    <meta content="Home - The yensplash" property="og:title" />
     <meta property="og:image" content="https://images.search.yahoo.com/search/images;_ylt=AwrOqqqngidmCAQA1AtXNyoA;_ylu=Y29sbwNncTEEcG9zAzEEdnRpZAMEc2VjA3Nj?type=E210US885G0&p=yensplash+icon&fr=mcafee&th=355&tw=474&imgurl=https%3A%2F%2Fi.ytimg.com%2Fvi%2FLTS5swP493g%2Fhqdefault.jpg&rurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DLTS5swP493g&size=8KB&name=Yensplash+-+YouTube&oid=1&h=360&w=480&turl=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.7Uaz9o0YTsOhyB53xhBM_wHaFj%26pid%3DApi&tt=Yensplash+-+YouTube&sigr=u2BTKbVLnypZ&sigit=NYhOzTfa1xqN&sigi=9gkcWJfaNYHD&sign=ncA970q8TDQN&sigt=ncA970q8TDQN">
     <meta
       content="Yensplash2k24."
@@ -1208,7 +1208,24 @@
       id="coin"
       style="margin-top: 50px;"
     >
-      <div class="copy-link"><h1 class="head">Fragments of Fresco</h1></div>
+    <style>
+      #splash-h1{
+        font-family: 'Astaghfirulloh Demo';
+        font-size: 80px;
+      }
+      @media(max-width:952px){
+        #splash-h1{
+        font-size: 32px;
+        height: 100%;
+        align-content: center;
+        margin-top: -0.5cm;
+      }
+      .splash-div{
+        height: 80px;
+      }
+      }
+    </style>
+      <div class="copy-link"><div class="splash-div"><h1 class="head" id="splash-h1">Fragments of Fresco</h1></div></div>
       <img
         src="https://uploads-ssl.webflow.com/5cff83ac2044e22cb8cf2f11/5d25cdda7dcddd7271ddc7da_coin.png"
         width="195"
@@ -1342,12 +1359,12 @@
                       rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                     transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0)
                       rotateY(0) rotateZ(0) skew(0, 0);
-                      color: red;
+                      color: red; 
                   "
                   class="img-head-3"
                   id="days"
                 >
-                  REGISTRATION
+                  <b>REGISTRATION</b>
                 </h3>
                 <h2
                   style="
@@ -1887,7 +1904,7 @@
                   rotateY(0) rotateZ(0) skew(0, 0);
                 opacity: 0;
                 
-                background-image: url(chenda.jpeg);
+                background-image: url(/regimages/2nd\ \(1\).jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -1914,7 +1931,7 @@
                 transform: translate3d(-236px, 0, 0) scale3d(0.4, 0.4, 1)
                   rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                 opacity: 0;
-                background-image: url(matadorea.png);
+                background-image: url(/regimages/djj\ \(1\).jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -1946,7 +1963,7 @@
                   scale3d(0.7000000000000006, 0.7000000000000006, 1) rotateX(0)
                   rotateY(0) rotateZ(0) skew(0, 0);
                 opacity: 0.01;
-                background-image: url(pearl.jpeg);
+                background-image: url(/regimages/dj.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -1972,7 +1989,7 @@
                 transform: translate3d(0, 0, 0) scale3d(0.5, 0.5, 1) rotateX(0)
                   rotateY(0) rotateZ(0) skew(0, 0);
                 opacity: 0;
-                background: url(song.jpg) center center / cover no-repeat;
+                background: url(/regimages/song.jpg) center center / cover no-repeat;
                 background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -1999,7 +2016,7 @@
                 transform: translate3d(0, 0, 0) scale3d(0.4, 0.4, 1) rotateX(0)
                   rotateY(0) rotateZ(0) skew(0, 0);
                 opacity: 0;
-                background: url(dance.jpeg) center center / cover no-repeat;
+                background: url(/regimages/jnrs.jpg) center center / cover no-repeat;
                 background-repeat: no-repeat;
     background-position: center;
     width: 24%;
@@ -2025,7 +2042,7 @@
                 transform: translate3d(0, 0, 0) scale3d(0.2, 0.2, 1) rotateX(0)
                   rotateY(0) rotateZ(0) skew(0, 0);
                 opacity: 0;
-                background: url(car.png) center center / cover no-repeat;
+                background: url(/regimages/ournew.jpg) center center / cover no-repeat;
                 background-repeat: no-repeat;
     background-position: center;
     width: 45%;
@@ -2051,7 +2068,7 @@
                 transform: translate3d(0, -80px, 0) scale3d(1, 1, 1) rotateX(0)
                   rotateY(0) rotateZ(0) skew(0, 0);
                 opacity: 0;
-                background: url(holip.png) center center / cover no-repeat;
+                background: url(/regimages/snrs.jpg) center center / cover no-repeat;
                 background-repeat: no-repeat;
     background-position: center;
     width: 45%;
@@ -2069,7 +2086,7 @@
             
           </div>
           <a
-            href="http://orinoco.netlify.app"
+            href="https://drive.google.com/drive/mobile/folders/1qdoqyWQC9WjfeGheFAVA3y2R_2od_F-C?usp=drive_link"
             style="
               -webkit-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1)
                 rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
