--- a/index.html
+++ b/index.html
@@ -1478,7 +1478,7 @@
                   rotateY(0) rotateZ(0) skew(0, 0);
               "
             >
-            Farewell to the batch of 2020
+            CollegeDay
               </h3>
               <div
                 data-w-id="bde65c49-3eeb-3873-bb0b-461dac42d3df"
@@ -1494,7 +1494,7 @@
                 "
                 class="info-txt"
               >
-              Auto expo<br>Flash mob Dance<br>Jam Session
+              Solo&Duet singing prilims<br>Variety
               </div>
             </div>
           <div
@@ -1637,8 +1637,8 @@
               "
               class="info-txt"
             >
-              Rally with chendamelam<br>
-              Mr&Ms YIT<br>Battle of Bands<br>Variety show
+              Rally <br>
+              Yensplash innaguration<br>Ramp Walk<br>Battle of Bands<br>Flashmob
             </div>
           </div>
           
@@ -1735,7 +1735,7 @@
                 transform: translate3d(0, 150px, 0) scale3d(1, 1, 1) rotateX(0)
                   rotateY(0) rotateZ(0) skew(0, 0);
               "
-            >
+            > 
               DJ Night with DJ PEARL
             </h3>
             <div
@@ -1752,9 +1752,9 @@
               "
               class="info-txt"
             >
-              Battle of Dance<br>
-              Culturehood Dance<br>
-              Color session
+              Solo and Duet songs<br>
+              Solo and Group Dance<br>
+              Mini Band
             </div>
           </div>
         </div>
