--- a/registration.html
+++ b/registration.html
@@ -71,102 +71,102 @@
             font-weight: 900;
         }
         .card1 {
-            background-image: url('/regimages/reel\ \(2\).jpg');
+            background-image: url('/regimages/reel.png');
 
         }
 
         .card2 {
-            background-image: url('/regimages/photography.jpg');
+            background-image: url('/regimages/PHOTOGRAPHY.png');
         }
 
         .card3 {
-            background-image: url('/regimages/mehandi.jpg');
+            background-image: url('/regimages/mehandi.png');
         }
 
         .card4 {
-            background-image: url('/regimages/rangoli.jpg');
+            background-image: url('/regimages/RANGOLI.png');
         }
 
         .card5 {
-            background-image: url('/regimages/debate.jpg');
+            background-image: url('/regimages/face\ off.png');
         }
         .card6 {
-            background-image: url('/regimages/pencil.jpg');
+            background-image: url('/regimages/drawing.png');
         }
         .card7 {
-            background-image: url('/regimages/facepaint.jpg');
+            background-image: url('/regimages/facepaint.png');
         }
 
         .card8 {
-            background-image: url('/regimages/jazzoff.jpg');
+            background-image: url('/regimages/jazz\ off.png');
         }
 
         .card9 {
-            background-image: url('/regimages/extempore.jpg');
+            background-image: url('/regimages/EXTEMPORE.png');
         }
 
         .card10 {
-            background-image: url('/regimages/anime.png');
+            background-image: url('/regimages/SPORTS.png');
         }
 
         .card11 {
-            background-image: url('/regimages/drama.jpg');
+            background-image: url('/regimages/Untitled\ design.png\ KPOP.png');
         }
 
         .card12 {
-            background-image: url('/regimages/pushup1.jpg');
+            background-image: url('/regimages/PUSH\ UP.png');
         }
 
         .card13 {
-            background-image: url('/regimages/penalty.jpg');
+            background-image: url('/regimages/PENALTY\ SHOOT.png');
         }
 
 
         .card14 {
-            background-image: url('/regimages/cooking.jpg');
+            background-image: url('/regimages/COOKING\ WITHOUT\ FIRE\ \(1\).png');
         }
 
         .card15 {
-            background-image: url('/regimages/treasure.jpg');
+            background-image: url('/regimages/PIRATE\'S\ PURSUIIT_20240423_231530_0000.png');
         }
 
         .card16 {
-            background-image: url('/regimages/quiz.jpg');
+            background-image: url('/regimages/quiz.png');
         }
 
         .card17 {
-            background-image: url('/regimages/dposter.jpg');
+            background-image: url('/regimages/coming-3605857_1280.jpg');
         }
         .card18 {
-            background-image: url('/regimages/bgmi.jpg');
+            background-image: url('/regimages/BGMI.png');
         }
 
         .card19 {
-            background-image: url('/regimages/pes.jpg');
+            background-image: url('/regimages/PES\ \(2\).png');
         }
         .card20 {
-            background-image: url('/regimages/lagori.jpeg');
+            background-image: url('/regimages/lagori.png');
         }
         .card21 {
-            background-image: url('/regimages/solo\ dance.jpg');
+            background-image: url('/regimages/dance.png');
         }
         .card22 {
-            background-image: url('/regimages/groupdance.jpg');
+            background-image: url('/regimages/dance.png');
         }
         .card23 {
-            background-image: url('/regimages/solosing.jpg');
+            background-image: url('/regimages/singing.png');
         }
         .card24 {
-            background-image: url('/regimages/duetsong.jpg');
+            background-image: url('/regimages/singing.png');
         }
         .card25 {
-            background-image: url('/regimages/rampwalk.jpg');
+            background-image: url('/regimages/YIT_20240423_215011_0000.png');
         }
         .card26 {
-            background-image: url('/regimages/bands.jpg');
+            background-image: url('/regimages/coming-3605857_1280.jpg');
         }
         .card27 {
-            background-image: url('/regimages/variety.jpg');
+            background-image: url('/regimages/YEN\ SPLASH\ 20\ 24\ TALENT\ TRIUMPH\ THE\ VARIETY\ SHOW.png');
         }
         
 
@@ -218,16 +218,16 @@
     <div class="close-button">
         <a href="index.html" style="color: whitesmoke; font-weight: bolder;">&times;</a>
     </div>
-    <div class="card card1" onclick="window.location.href = 'https://google.com';">
+    <div class="card card1" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSf1wUzEJ0gGvZNhVw8uTNZDfBgaNkM3KNa4k-C00arZQ2ojhg/viewform';">
         <div class="div-p"><p>Reel  making</p></div>
     </div>
-    <div class="card card2" onclick="window.location.href = 'https://google.com';">
+    <div class="card card2" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfWeApvhhKTk7O5DK3ArsuTKnU3CqxIW5OEorb_ckBI5VynXQ/viewform';">
         <div class="div-p"><p>Photography</p></div>
     </div>
-    <div class="card card3"onclick="window.location.href = 'https://google.com';">
+    <div class="card card3"onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSefgbu4Q4udV7DngqxnBcx4LXIjZLQsE5cVW8P9ElKr3WvP2g/viewform';">
         <div class="div-p"><p>Mehendi </p></div>
     </div>
-    <div class="card card4" onclick="window.location.href = 'https://google.com';">
+    <div class="card card4" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSeg5ZrNwCw_t3-uL47stI1Ourawut25LCFTxOuxJpR1yG0B5w/viewform';">
         <div class="div-p"><p>Rangoli</p></div>
     </div>
     <div class="card card5" onclick="window.location.href = 'https://google.com';">
@@ -248,7 +248,7 @@
     <div class="card card10" onclick="window.location.href = 'https://google.com';">
         <div class="div-p"><p>Anime</p></div>
     </div>
-    <div class="card card11" onclick="window.location.href = 'https://google.com';">
+    <div class="card card11" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSdrINrOusNR9B5MaKx47seiIWK2Y5b2qcwU0Lk2RWesTF3Pbw/viewform';">
         <div class="div-p"><p>Drama time</p></div>
     </div>
     <div class="card card12" onclick="window.location.href = 'https://google.com';">
@@ -296,7 +296,7 @@
     <div class="card card26" onclick="window.location.href = 'https://google.com';">
         <div class="div-p"><p>Battle of bands</p></div>
     </div>
-    <div class="card card27" onclick="window.location.href = 'https://google.com';">
+    <div class="card card27" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfuzxP58kRrJgDnq1G0RSh-EWY8YX3N5C9li2zI1TtIvIw62g/viewform';">
         <div class="div-p"><p>Variety</p></div>
     </div>
 </body>
