--- a/registration.html
+++ b/registration.html
@@ -71,102 +71,102 @@
             font-weight: 900;
         }
         .card1 {
-            background-image: url('/regimages/reel.png');
+            background-image: url('/regimages/reel.jpg');
 
         }
 
         .card2 {
-            background-image: url('/regimages/PHOTOGRAPHY.png');
+            background-image: url('/regimages/photography.jpg');
         }
 
         .card3 {
-            background-image: url('/regimages/mehandi.png');
+            background-image: url('/regimages/mehandi.jpg');
         }
 
         .card4 {
-            background-image: url('/regimages/RANGOLI.png');
+            background-image: url('/regimages/rangoli.jpg');
         }
 
         .card5 {
-            background-image: url('/regimages/face\ off.png');
+            background-image: url('/regimages/debate.jpg');
         }
         .card6 {
-            background-image: url('/regimages/drawing.png');
+            background-image: url('/regimages/drawing.jpg');
         }
         .card7 {
-            background-image: url('/regimages/facepaint.png');
+            background-image: url('/regimages/facepaint.jpg');
         }
 
         .card8 {
-            background-image: url('/regimages/jazz\ off.png');
+            background-image: url('/regimages/jazzoff.jpg');
         }
 
         .card9 {
-            background-image: url('/regimages/EXTEMPORE.png');
+            background-image: url('/regimages/extempore.jpg');
         }
 
         .card10 {
-            background-image: url('/regimages/SPORTS.png');
+            background-image: url('/regimages/anime.jpg');
         }
 
         .card11 {
-            background-image: url('/regimages/Untitled\ design.png\ KPOP.png');
+            background-image: url('/regimages/kpop.jpg');
         }
 
         .card12 {
-            background-image: url('/regimages/PUSH\ UP.png');
+            background-image: url('/regimages/pushup.jpg');
         }
 
         .card13 {
-            background-image: url('/regimages/PENALTY\ SHOOT.png');
+            background-image: url('/regimages/penalty.jpg');
         }
 
 
         .card14 {
-            background-image: url('/regimages/COOKING\ WITHOUT\ FIRE\ \(1\).png');
+            background-image: url('/regimages/cooking.jpg');
         }
 
         .card15 {
-            background-image: url('/regimages/PIRATE\'S\ PURSUIIT_20240423_231530_0000.png');
+            background-image: url('/regimages/treasure.jpg');
         }
 
         .card16 {
-            background-image: url('/regimages/quiz.png');
+            background-image: url('/regimages/quiz.jpg');
         }
 
         .card17 {
             background-image: url('/regimages/coming-3605857_1280.jpg');
         }
         .card18 {
-            background-image: url('/regimages/BGMI.png');
+            background-image: url('/regimages/bgmi.jpg');
         }
 
         .card19 {
-            background-image: url('/regimages/PES\ \(2\).png');
+            background-image: url('/regimages/pes.jpg');
         }
         .card20 {
-            background-image: url('/regimages/lagori.png');
+            background-image: url('/regimages/lagori.jpg');
         }
         .card21 {
-            background-image: url('/regimages/dance.png');
+            background-image: url('/regimages/dance.jpg');
         }
         .card22 {
-            background-image: url('/regimages/dance.png');
+            background-image: url('/regimages/dance.jpg');
         }
         .card23 {
-            background-image: url('/regimages/singing.png');
+            background-image: url('/regimages/songnew.jpg');
         }
         .card24 {
-            background-image: url('/regimages/singing.png');
+            background-image: url('/regimages/songnew.jpg');
         }
         .card25 {
-            background-image: url('/regimages/YIT_20240423_215011_0000.png');
+            background-image: url('/regimages/mryit.jpg');
         }
         .card26 {
             background-image: url('/regimages/coming-3605857_1280.jpg');
         }
         .card27 {
-            background-image: url('/regimages/YEN\ SPLASH\ 20\ 24\ TALENT\ TRIUMPH\ THE\ VARIETY\ SHOW.png');
+            background-image: url('/regimages/triumph.jpg');
         }
         
 
