--- a/index.html
+++ b/index.html
@@ -1494,7 +1494,7 @@
                 "
                 class="info-txt"
               >
-              Solo&Duet singing prilims<br>Variety
+              Solo&Duet singing<br>Variety<br>Let's Jam
               </div>
             </div>
           <div
