--- a/index.html
+++ b/index.html
@@ -1494,7 +1494,7 @@
                 "
                 class="info-txt"
               >
-              Solo&Duet singing<br>Variety<br>Let's Jam
+              Farewell<br>Solo&Duet singing<br>Variety<br>Let's Jam
               </div>
             </div>
           <div
@@ -1638,7 +1638,7 @@
               class="info-txt"
             >
               Rally <br>
-              Yensplash innaguration<br>Ramp Walk<br>Battle of Bands<br>Flashmob
+              Yensplash innaguration<br>MR & MRS YIT<br>Battle of Bands<br>Entertainment Bits
             </div>
           </div>
           
@@ -1752,9 +1752,10 @@
               "
               class="info-txt"
             >
-              Solo and Duet songs<br>
-              Solo and Group Dance<br>
-              Mini Band
+            Awaaz Anokhi<br>
+            Jhalak Dikhlaja
+            <br>
+            The Band Next Door
             </div>
           </div>
         </div>
@@ -2108,7 +2109,7 @@
         Created By
         <a href="http://orinoco.netlify.app" target="_blank" style="color: red;">Orinoco</a><br>
         <a href="http://instagram.com/thejass_krishna" target="_blank"><i class="fab fa-instagram" style="color: #E1306C"></i> Thejaskrishna</a><br>
-        <a href="http://instagram.com/shebz.___" target="_blank">&nbsp&nbsp&nbsp<i class="fab fa-instagram" style="color: #E1306C;"></i> Mohammed Shebin</a>
+        <a href="http://instagram.com/shebz.___" target="_blank">&nbsp&nbsp&nbsp<i class="fab fa-instagram" style="color: #E1306C;"></i> Muhammed Shebin</a>
     </div>    
   
       <div class="copy-link">
