--- a/index.html
+++ b/index.html
@@ -1494,7 +1494,7 @@
                 "
                 class="info-txt"
               >
-              Farewell<br>Solo&Duet singing<br>Variety<br>Let's Jam
+              Farewell 2024<br>Variety<br>Let's Jam
               </div>
             </div>
           <div
