--- a/registration.html
+++ b/registration.html
@@ -230,67 +230,67 @@
     <div class="card card4" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSeg5ZrNwCw_t3-uL47stI1Ourawut25LCFTxOuxJpR1yG0B5w/viewform';">
         <div class="div-p"><p>Rangoli</p></div>
     </div>
-    <div class="card card5" onclick="window.location.href = 'https://google.com';">
+    <div class="card card5" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfnb_crZhReUTZsa3bVWGaJwhe2CRnuDgUOAMZU1AMAfPrCzQ/viewform';">
         <div class="div-p"><p>Debate</p></div>
     </div>
-    <div class="card card6" onclick="window.location.href = 'https://google.com';">
+    <div class="card card6" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSc7qGbkXTjv9XjGqRDU_TxmtIhJW31-dy-X-OGcPcWHPbMatQ/viewform';">
         <div class="div-p"><p>Pencil/Pen sketch</p></div>
     </div>
-    <div class="card card7"onclick="window.location.href = 'https://google.com';">
+    <div class="card card7"onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSdCrlfr2cRdDvUbqg-zYLyK5Cdy4DYnn-K0rIlQ6ZtCm1KWlg/viewform';">
         <div class="div-p"><p>Face painting</p></div>
     </div>
-    <div class="card card8" onclick="window.location.href = 'https://google.com';">
+    <div class="card card8" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfC0HBHb4ZcLN9kUv1ZaJza02BwI2Oa6RaE3fAtVRBVSU-6qQ/viewform';">
         <div class="div-p"><p>Jazz off</p></div>
     </div>
-    <div class="card card9" onclick="window.location.href = 'https://google.com';">
+    <div class="card card9" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLScPaiM1SBHj_Qx05ApLyLBy8hglQ8Z37Y9UDGz1i60WKZYkBw/viewform';">
         <div class="div-p"><p>Extempore</p></div>
     </div>
-    <div class="card card10" onclick="window.location.href = 'https://google.com';">
+    <div class="card card10" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLScUkgF3_wPkwfNOJ052ZfiX57DYa_gAkYGqUVO9NfBDzc4G8w/viewform';">
         <div class="div-p"><p>Anime</p></div>
     </div>
     <div class="card card11" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSdrINrOusNR9B5MaKx47seiIWK2Y5b2qcwU0Lk2RWesTF3Pbw/viewform';">
         <div class="div-p"><p>Drama time</p></div>
     </div>
-    <div class="card card12" onclick="window.location.href = 'https://google.com';">
+    <div class="card card12" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSd7JF-TiOUty4CHuYM-HP751gY6dWfRUJrorgR05BYRRl4OiA/viewform';">
         <div class="div-p"><p>Push-up</p></div>
     </div>
-    <div class="card card13"onclick="window.location.href = 'https://google.com';">
+    <div class="card card13"onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLScOYOdbWfpWy8gbQDXgj9STOyVu2m90vBZgs0Ns2DJuLvl0Sw/viewform';">
         <div class="div-p"><p>Penalty shoot</p></div>
     </div>
-    <div class="card card14" onclick="window.location.href = 'https://google.com';">
+    <div class="card card14" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfN1_iFjsiT3Mo7wyErhc4nR1HmTocgLoR_danRJLaUR__Dkw/viewform';">
         <div class="div-p"><p>Cooking</p></div>
     </div>
-    <div class="card card15" onclick="window.location.href = 'https://google.com';">
+    <div class="card card15" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfoouA9gGuMm8JC5OasIErnJrN01AClCvU0BKb4Cb-_DeFeMg/viewform';">
         <div class="div-p"><p>Treasure hunt</p></div>
     </div>
-    <div class="card card16" onclick="window.location.href = 'https://google.com';">
+    <div class="card card16" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLScF5ukAmfBghk6RtQHM8AF2ysAHJf4dKja51piWTqPVI2ne2g/viewform';">
         <div class="div-p"><p>Ǫuiz</p></div>
     </div>
-    <div class="card card17" onclick="window.location.href = 'https://google.com';">
+    <div class="card card17" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfwbrEyKXINfzPwIzo9iQqUqbwUzzKE5g9isP0md3em49znXw/viewform';">
         <div class="div-p"><p>Digitalposter making</p></div>
     </div>
-    <div class="card card18" onclick="window.location.href = 'https://google.com';">
+    <div class="card card18" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSe9fjZ1kVomKhbV2CgwUoGOX6M1h4XBgO2VE2iliGh_lzONFQ/viewform';">
         <div class="div-p"><p>BGMI</p></div>
     </div>
-    <div class="card card19" onclick="window.location.href = 'https://google.com';">
+    <div class="card card19" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfp9EXxzL2vCe5bkq0Uxo7M6usX--e6KbhwKdJ9cJ-CNHuBFQ/viewform';">
         <div class="div-p"><p>PES</p></div>
     </div>
-    <div class="card card20" onclick="window.location.href = 'https://google.com';">
+    <div class="card card20" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSeCYYgmudh9vWfyywZpiryAI7_Z-VAjvLDm8AgPBhP8sQenZg/viewform';">
         <div class="div-p"><p>LAGORI</p></div>
     </div>
-    <div class="card card21" onclick="window.location.href = 'https://google.com';">
+    <div class="card card21" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSdRTF9j4ZgAqfWIK1kfweLe-lOFnVqbGqHyjvmmjmQ6r3HmZQ/viewform';">
         <div class="div-p"><p>Solo dance</p></div>
     </div>
-    <div class="card card22" onclick="window.location.href = 'https://google.com';">
+    <div class="card card22" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSdZ9gJHX61PQ8WTrg9dfmp2QPmlUe1YI0OmLUl46D95R_UQtw/viewform';">
         <div class="div-p"><p>Group dance</p></div>
     </div>
-    <div class="card card23" onclick="window.location.href = 'https://google.com';">
+    <div class="card card23" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSe49XX4TZJ9HgnxTSW9zVwkZj_QHNpL-e4oLpy2-zspRUOaGA/viewform';">
         <div class="div-p"><p>Solo singing</p></div>
     </div>
-    <div class="card card24" onclick="window.location.href = 'https://google.com';">
+    <div class="card card24" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLScHJXRx5uwLPHNVCeeCVer5PkRnR-kaagaJdsDHrYd3WTShxQ/viewform';">
         <div class="div-p"><p>Duet singing</p></div>
     </div>
-    <div class="card card25" onclick="window.location.href = 'https://google.com';">
+    <div class="card card25" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSc3LEmqEFHbV0G16blITqQ7dtWpjDp4Hi_fW7wHV46-W_-LaA/viewform';">
         <div class="div-p"><p>Ramp walk</p></div>
     </div>
     <div class="card card26" onclick="window.location.href = 'https://google.com';">
