--- a/index.html
+++ b/index.html
@@ -2398,6 +2398,9 @@
     display: none !important;
   }
 </style>
-
+<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
