--- a/index.html
+++ b/index.html
@@ -2110,6 +2110,7 @@
         <a href="http://orinoco.netlify.app" target="_blank" style="color: red;">Orinoco</a><br>
         <a href="http://instagram.com/thejass_krishna" target="_blank"><i class="fab fa-instagram" style="color: #E1306C"></i> Thejaskrishna</a><br>
         <a href="http://instagram.com/shebz.___" target="_blank">&nbsp&nbsp&nbsp<i class="fab fa-instagram" style="color: #E1306C;"></i> Muhammed Shebin</a>
+        <a href="http://instagram.com/inshad.___" target="_blank"><i class="fab fa-instagram" style="color: #E1306C"></i> Inshad abdulla</a><br>
     </div>    
   
       <div class="copy-link">
